--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -38,4 +38,4 @@ jobs:
           with:
             github_token: ${{ secrets.GITHUB_TOKEN }}
             publish_dir: ./storybook-static
-            destination_dir: storybook/test
+            destination_dir: test/storybook
