--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -1,41 +1,42 @@
+name: Build and Deploy Storybook by Actor
 on:
-    push:
-      tags:
-        - 'storybook*'
-      paths:
-        - './'
-        
+  push:
+    tags:
+      - 'storybook*'
+    paths:
+      - './'
+    
 permissions:
-    contents: write
-    pages: write
-  
+  contents: write
+  pages: write
+
 jobs:
-    build:
-      runs-on: ubuntu-latest
-  
-      steps:
-        - name: Checkout
-          uses: actions/checkout@v3
-  
-        - name: Set up Node
-          uses: actions/setup-node@v3
-          with:
-            node-version: 18
-  
-        - uses: pnpm/action-setup@v2
-          with:
-            version: 8
-            run_install: false
-  
-        - name: Build
-          working-directory: ./src
-          run: |
-            pnpm install
-            pnpm build-storybook
-  
-        - name: Deploy to GitHub Pages
-          uses: peaceiris/actions-gh-pages@v3
-          with:
-            github_token: ${{ secrets.GITHUB_TOKEN }}
-            publish_dir: ./storybook-static
-            destination_dir: ${{ github.actor }}/storybook
+  build:
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+
+      - name: Set up Node
+        uses: actions/setup-node@v3
+        with:
+          node-version: 18
+
+      - uses: pnpm/action-setup@v2
+        with:
+          version: 8
+          run_install: false
+
+      - name: Build
+        working-directory: ./src
+        run: |
+          pnpm install
+          pnpm build-storybook
+
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./storybook-static
+          destination_dir: ${{ github.actor }}-storybook
