--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -43,6 +43,6 @@ jobs:
         - name: Show URL
           if: success()
           run: |
-              echo "URL: https://${{ github.repository_owner }}.github.io/comparison-matrix/${{ github.actor }}/storybook""
+              echo "URL: https://${{ github.repository_owner }}.github.io/comparison-matrix/${{ github.actor }}/storybook"
 
   
