--- a/.github/workflows/storybook.yml
+++ b/.github/workflows/storybook.yml
@@ -43,6 +43,7 @@ jobs:
         - name: Show URL
           if: success()
           run: |
-              echo "URL: https://${{ github.repository_owner }}.github.io/${{ github.repository }}/${{ github.actor }}/storybook"
+              repo_name=$(basename ${{ github.repository }})
+              echo "URL: https://${{ github.repository_owner }}.github.io/$repo_name/${{ github.actor }}/storybook"
 
   
